--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/teachers.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <script src="../js/main.js" defer></script>
 </head>
