Fix: corrected the html structure

--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -32,25 +32,37 @@
             </div>
         </div>
     </header>
+    
     <section>
-        <div class="section_container">
-            <div class="section_content">
+        <div class="mokytojai_text">
                 <h1>Mokytojai
                     <p>Mūsų komanda</p>
                 </h1>
-                <div class="section_content">
-                    <span class="matas_mindaugas">
-                        <img class="Matas" src="IMG_1304.jpg" alt="Matas" >
-                        <img class="Mindaugas" src="IMG_1354.jpg" alt="Mindaugas" >
-                    </span>
-                    <span class="juste_donata">
-                        <img class="Juste" src="IMG_1279.jpg" alt="Juste" >
-                        <img class="Donata" src="IMG_0956.jpeg" alt="Donata">
-                    </span>
+        </div>
+
+        <div class="teachers_grid">
+            <div class="teacher">
+                <img src="IMG_1304.jpg" alt="Matas Stirbys">
+                <h2>Matas Stirbys <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
+                <p>Pop, Show Dance, Folk Dance</p>
+            </div>
+            <div class="teacher">
+                <img src="IMG_1354.jpg" alt="Mindaugas Padagas">
+                <h2>Mindaugas Padagas <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
+                <p>Pop, Show Dance, Latin Dance</p>
+            </div>
+            <div class="teacher">
+                <img src="IMG_1279.jpg" alt="Juste Tulickienė">
+                <h2>Justė Tulickienė <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
+                <p>Pop, Show Dance, Folk Dance</p>
                 </div>
+            <div class="teacher">
+                <img src="IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė">
+                <h2>Donata Meiliūtė-Paulauskienė <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
+                <p>Pop, Show Dance, Folk Dance</p>
             </div>
         </div>
     </section>
-    
+    <footer>
 </body>
 </html>
