Fix: corrected css

--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -35,9 +35,9 @@
     
     <section>
         <div class="mokytojai_text">
-                <h1>Mokytojai
-                    <p>Mūsų komanda</p>
-                </h1>
+            <h1>Mokytojai
+                <p>Mūsų komanda</p>
+            </h1>
         </div>
 
         <div class="teachers_grid">
@@ -55,7 +55,7 @@
                 <img src="IMG_1279.jpg" alt="Juste Tulickienė">
                 <h2>Justė Tulickienė <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
                 <p>Pop, Show Dance, Folk Dance</p>
-                </div>
+            </div>
             <div class="teacher">
                 <img src="IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė">
                 <h2>Donata Meiliūtė-Paulauskienė <i class="bi bi-box-arrow-up-right custom_icon"></i></h2>
@@ -64,5 +64,11 @@
         </div>
     </section>
     <footer>
+        <div class="footer_container">
+            <div class="footer_content">
+                <a href="#"><img class="logo" src="Inkarelis 1.png" alt="logotipas"></a>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
