--- a/en/teachers.html
+++ b/en/teachers.html
@@ -19,27 +19,44 @@
                 <div class="menu-icon">&#9776;</div>
                 <div class="nav_wrapper">
                     <nav class="links">
-                        <a href="#" class="apie_mus">About Us</a>
+                        <div class="dropdown">
+                            <a href="#" class="apie_mus" tabindex="0">About Us</a>
+                            <div class="dropdown_content">
+                                <a href="#">Studio</a>
+                                <a href="#">Teachers</a>
+                                <a href="#">Our values</a>
+                            </div>
+                        </div>
                         <a href="#" class="Tvarkaraščiai">Schedules</a>
                         <a href="#" class="Kainos">Prices</a>
-                        <a href="#" class="Kontaktai">Contact</a>
+                        <a href="#" class="Kontaktai">Contacts</a>
                         <a href="http://127.0.0.1:8080/lt/teachers.html" class="EN">EN</a>
-                    </nav> 
+                    </nav>
                     <a href="#">
                         <button class="registracija">Registration</button>
-                    </a>                
+                    </a>
+                </div>                        
             </div>
         </div>
     </header>
     <div class="off-screen-menu">
-        <ul>
-          <li><a href="#">About Us</a></li>
+        <!-- Main menu -->
+        <ul class="main-menu">
+          <li><a href="#" class="open-apie-mus">About Us</a></li>
           <li><a href="#">Schedules</a></li>
           <li><a href="#">Prices</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="http://127.0.0.1:8080/en/teachers.html">EN</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="http://127.0.0.1:8080/lt/teachers.html">EN</a></li>
         </ul>
-    </div>
+      
+        <!-- Apie mus submenu -->
+        <ul class="apie-mus-menu">
+          <li><a href="#" class="back-to-main">← Back</a></li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Teachers</a></li>
+          <li><a href="#">Our values</a></li>
+        </ul>
+      </div>
     <section>
         <div class="mokytojai_text">
             <h1>Teachers
