add teachers html

--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -20,7 +20,7 @@
                 <div class="nav_wrapper">
                     <nav class="links">
                         <div class="dropdown">
-                            <a href="#" class="apie_mus" tabindex="0">Apie mus</a>
+                            <a href="http://127.0.0.1:8080/lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
                             <div class="dropdown_content">
                                 <a href="#">Studija</a>
                                 <a href="#">Mokytojai</a>
@@ -64,28 +64,28 @@
         <div class="teachers_grid">
             <div class="teacher">
                 <img src="../images/IMG_1304.jpg" alt="Matas Stirbys">
-                <h2>Matas Stirbys <a href="#">
+                <h2>Matas Stirbys <a href="http://127.0.0.1:8080/lt/teacher_1.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Mokytojas: Pop, Show Dance, Folk Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_1354.jpg" alt="Mindaugas Padagas">
-                <h2>Mindaugas Padagas<a href="#">
+                <h2>Mindaugas Padagas<a href="http://127.0.0.1:8080/lt/teacher_2.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Šokio mokytojas metodininkas: Pop, Show Dance, Latin Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_1279.jpg" alt="Juste Tulickienė">
-                <h2>Justė Tulickienė<a href="#">
+                <h2>Justė Tulickienė<a href="http://127.0.0.1:8080/lt/teacher_3.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Vyr. Šokio mokytoja: Pop, Show Dance, Folk Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė">
-                <h2>Donata Meiliūtė-Paulauskienė <a href="#">
+                <h2>Donata Meiliūtė-Paulauskienė <a href="http://127.0.0.1:8080/lt/teacher_4.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Šokio mokytoja metodininkė, studijos vedėja: Pop, Show Dance, Folk Dance</p>
