fix: structure of files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inkarelis</title>
-    <link rel="stylesheet" href="../css/prices.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,10 @@
       <div class="header_container">
         <div class="header_content">
           <a href="../lt/index.html"
-            ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
+            ><img
+              class="logo"
+              src="../images/Inkarelis_white 1.png"
+              alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
           <div class="nav_wrapper">
@@ -42,52 +45,152 @@
               >
               <a href="../lt/prices.html" class="Kainos">Kainos</a>
               <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
-              <a href="../en/teachers.html" class="LT">LT</a>
+              <a href="../en/index.html" class="LT">LT</a>
             </nav>
-            <a href="../lt/registration.html">
-              <button class="registracija">Registracija</button>
-            </a>
+            <a href="../lt/registration.html" class="header_btn"
+              >Registracija</a
+            >
           </div>
         </div>
       </div>
     </header>
+
     <div class="off-screen-menu">
       <ul class="main-menu">
         <li><a href="#" class="open-apie-mus">Apie mus</a></li>
         <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
         <li><a href="../lt/prices.html">Kainos</a></li>
         <li><a href="../lt/contact.html">Kontaktai</a></li>
-        <li><a href="../en/teachers.html">LT</a></li>
+        <li><a href="../en/index.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
         <li><a href="../lt/about_us.html">Apie studiją</a></li>
         <li><a href="../lt/teachers.html">Mokytojai</a></li>
-        <li><a href="../lt/about_us.html">Mūsų vertybės</a></li>
       </ul>
     </div>
 
-    <section id="kainos_section">
-      <div class="kainos_heading">
-        <h1>Kainos</h1>
+    <section>
+      <div class="hero">
+        <div class="hero_video">
+          <video autoplay muted loop playsinline id="hero-video">
+            <source src="../images/inkarelis_hero.mp4" type="video/mp4" />
+            <source src="../images/inkarelis_hero.webm" type="video/webm" />
+            <source src="../images/inkarelis_hero.ogv" type="video/ogg" />
+          </video>
+        </div>
+        <div class="hero_content">
+          <h1>Pradėk savo šokio kelionę kartu su mumis!</h1>
+          <a href="../lt/registration.html" class="hero_btn">Prisijunk Dabar</a>
+        </div>
+        <a href="#apie_mus_section"
+          ><img class="anchor" src="../images/Anchor_icon 1.png" alt="anchor"
+        /></a>
       </div>
-      <div class="kaina_container">
-        <div class="kaina_box">
-          <div class="price_content">
-            <div class="price-line">
-              <span class="euro">€9/12</span>
-              <span class="men">mėn.</span>
+    </section>
+
+    <section id="apie_mus_section">
+      <div class="apie_mus_container">
+        <div class="apie_mus_content">
+          <div class="apie_mus_column">
+            <h2>Apie mus</h2>
+            <div class="apie_mus_flex">
+              <img src="../images/Line 1.png" />
+              <p>
+                Choreografijos studija „Inkarėlis“ – šokių studija pietinėje
+                Klaipėdos miesto dalyje. Studija yra Pasaulio lietuvių ir
+                Klaipėdos vakarų krašto dainų švenčių dalyvis, pristato save
+                respublikiniuose ir tarptautiniuose festivaliuose,
+                konkursuose.<br /><br />
+                „Inkarėlis“ siūlo platų šokių stilių pasirinkimą – čia
+                kiekvienas ras sau tinkamą užsiėmimą, nepriklausomai nuo amžiaus
+                ar patirties lygio.
+              </p>
             </div>
-            <p>
-              *kaina priklauso nuo mokytojo turimų valandų, laisvų vietų grupėse
-              ir užsiėmimų skaičiaus per savaitę.
-            </p>
+            <a href="../lt/about_us.html" class="skaityti_btn">
+              <img src="../images/skaityti_placiau.png" alt="arrow icon" />
+              Skaityti plačiau
+            </a>
           </div>
-          <a href="../lt/registration.html" class="registracija_price"
-            >Registruokis</a
-          >
+          <div class="apie_mus_column">
+            <img
+              class="apie_mus_dancer"
+              src="../images/apie_mus_dancer.jpg"
+              alt="apie_mus_dancer"
+            />
+          </div>
         </div>
       </div>
+    </section>
+
+    <section id="sokiu_stiliai_section">
+      <div class="sokiu_stiliai_heading">
+        <h2>Šokių stiliai</h2>
+      </div>
+      <div class="sokiu_stiliai_container">
+        <div class="apie_mus_pop">
+          <a href="../lt/pop_dance.html"><img src="../images/Slice 5.png" /></a>
+        </div>
+        <div class="apie_mus_show">
+          <a href="../lt/show_dance.html"
+            ><img src="../images/Slice 3.png"
+          /></a>
+        </div>
+        <div class="apie_mus_folk">
+          <a href="../lt/folk_dance.html"
+            ><img src="../images/Slice 1 (1).png"
+          /></a>
+        </div>
+        <div class="apie_mus_kids">
+          <a href="../lt/kids_dance.html"
+            ><img src="../images/Slice 2 (1).png"
+          /></a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="section_div">
+        <div class="item">
+          <img src="../images/Students (1).png" />
+          <h3>200+<br />Mokinių</h3>
+        </div>
+        <div class="item">
+          <img src="../images/Vector.png" />
+          <h3>Vasaros<br />Stovyklos</h3>
+        </div>
+        <div class="item">
+          <img src="../images/Hourglass.png" />
+          <h3>Patyrę<br />Mokytojai</h3>
+        </div>
+      </div>
+    </section>
+
+    <section id="treneriai_section">
+      <div class="treneriai_heading">
+        <h2>Mūsų treneriai</h2>
+      </div>
+      <div class="treneriai_container">
+        <div class="matas_container">
+          <img src="../images/coach1.png" />
+          <h3>Matas Stirbys</h3>
+        </div>
+        <div class="mindaugas_container">
+          <img src="../images/coach2.png" />
+          <h3>Mindaugas Padagas</h3>
+        </div>
+        <div class="juste_container">
+          <img src="../images/coach3.png" />
+          <h3>Justė Tulickienė</h3>
+        </div>
+        <div class="donata_container">
+          <img src="../images/coach4.png" />
+          <h3>Donata Meiliūtė-Paulauskienė</h3>
+        </div>
+      </div>
+      <a href="../lt/teachers.html" class="skaityti_placiau"
+        >Skaityti plačiau</a
+      >
     </section>
 
     <footer>
@@ -131,11 +234,7 @@
             <h2>Naršyti</h2>
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
-              <li>
-                <a href="../lt/index.html#sokiu_stiliai_section"
-                  >Šokių stiliai</a
-                >
-              </li>
+              <li><a href="#sokiu_stiliai_section">Šokių stiliai</a></li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
               <li><a href="../lt/prices.html">Kainos</a></li>
