--- a/lt/about_us.html
+++ b/lt/about_us.html
@@ -16,24 +16,23 @@
     <header>
         <div class="header_container">
             <div class="header_content">
-                <a href="http://127.0.0.1:8080/lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
+                <a href="../lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
                 <div class="menu-icon">&#9776;</div>
                 <div class="nav_wrapper">
                     <nav class="links">
                         <div class="dropdown">
-                            <a href="http://127.0.0.1:8080/lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
+                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
                             <div class="dropdown_content">
-                                <a href="http://127.0.0.1:8080/lt/about_us.html">Studija</a>
-                                <a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a>
-                                <a href="#">Mūsų vertybės</a>
+                                <a href="../lt/about_us.html">Studija</a>
+                                <a href="../lt/teachers.html">Mokytojai</a>
                             </div>
                         </div>
-                        <a href="http://127.0.0.1:8080/lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
-                        <a href="http://127.0.0.1:8080/lt/prices.html" class="Kainos">Kainos</a>
-                        <a href="#" class="Kontaktai">Kontaktai</a>
-                        <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
+                        <a href="../lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
+                        <a href="../lt/prices.html" class="Kainos">Kainos</a>
+                        <a href="../lt/schedule.html" class="Kontaktai">Kontaktai</a>
+                        <a href="../en/about_us.html" class="LT">LT</a>
                     </nav>
-                    <a href="#">
+                    <a href="../lt/registration.html">
                         <button class="registracija">Registracija</button>
                     </a>
                 </div>               
@@ -43,16 +42,15 @@
     <div class="off-screen-menu">
         <ul class="main-menu">
           <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-          <li><a href="#">Tvarkaraščiai</a></li>
-          <li><a href="#">Kainos</a></li>
-          <li><a href="#">Kontaktai</a></li>
-          <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
+          <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+          <li><a href="../lt/prices.html">Kainos</a></li>
+          <li><a href="../lt/contact.html">Kontaktai</a></li>
+          <li><a href="../en/teachers.html">LT</a></li>
         </ul>
         <ul class="apie-mus-menu">
           <li><a href="#" class="back-to-main">← Atgal</a></li>
-          <li><a href="http://127.0.0.1:8080/lt/about_us.html">Studija</a></li>
-          <li><a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a></li>
-          <li><a href="#">Mūsų vertybės</a></li>
+          <li><a href="../lt/about_us.html">Studija</a></li>
+          <li><a href="../lt/teachers.html">Mokytojai</a></li>
         </ul>
     </div>
 
@@ -94,7 +92,7 @@
     <div class="footer_container">
       <div class="footer_content">
         <div class="footer_column">
-          <a href="#"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white" /></a>
+          <a href="../lt/index.html"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white" /></a>
           <div class="footer_paragraph">
             <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
           </div>
@@ -107,12 +105,12 @@
         <div class="footer_column">
           <h2>Naršyti</h2>
           <ul>
-            <li><a href="#">Šokių studija</a></li>
-            <li><a href="#">Šokių stiliai</a></li>
-            <li><a href="#">Treneriai</a></li>
-            <li><a href="#">Tvarkaraščiai</a></li>
-            <li><a href="#">Kainos</a></li>
-            <li><a href="#">Registracija</a></li>
+            <li><a href="../lt/about_us.html">Šokių studija</a></li>
+            <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+            <li><a href="../lt/teachers.html">Mokytojai</a></li>
+            <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+            <li><a href="../lt/prices.html">Kainos</a></li>
+            <li><a href="../lt/registration.html">Registracija</a></li>
           </ul>
         </div>
 
