--- a/lt/pop_dance.html
+++ b/lt/pop_dance.html
@@ -22,7 +22,7 @@
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="http://127.0.0.1:8080/lt/index.html"
+          <a href="../lt/index.html"
             ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
@@ -30,29 +30,28 @@
             <nav class="links">
               <div class="dropdown">
                 <a
-                  href="http://127.0.0.1:8080/lt/about_us.html"
+                  href="../lt/about_us.html"
                   class="apie_mus"
                   tabindex="0"
                   >Apie mus</a
                 >
                 <div class="dropdown_content">
-                  <a href="#">Studija</a>
-                  <a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a>
-                  <a href="#">Mūsų vertybės</a>
+                  <a href="../lt/about_us.html">Studija</a>
+                  <a href="../lt/teachers.html">Mokytojai</a>
                 </div>
               </div>
               <a
-                href="http://127.0.0.1:8080/lt/schedule.html"
+                href="../lt/schedule.html"
                 class="Tvarkaraščiai"
                 >Tvarkaraščiai</a
               >
-              <a href="http://127.0.0.1:8080/lt/prices.html" class="Kainos"
+              <a href="../lt/prices.html" class="Kainos"
                 >Kainos</a
               >
-              <a href="#" class="Kontaktai">Kontaktai</a>
-              <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
+              <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
+              <a href="../en/teachers.html" class="LT">LT</a>
             </nav>
-            <a href="#">
+            <a href="../lt/registration.html">
               <button class="registracija">Registracija</button>
             </a>
           </div>
@@ -62,16 +61,15 @@
     <div class="off-screen-menu">
       <ul class="main-menu">
         <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-        <li><a href="#">Tvarkaraščiai</a></li>
-        <li><a href="#">Kainos</a></li>
-        <li><a href="#">Kontaktai</a></li>
-        <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
+        <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+        <li><a href="../lt/prices.html">Kainos</a></li>
+        <li><a href="../lt/contact.html">Kontaktai</a></li>
+        <li><a href="../en/teachers.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
-        <li><a href="#">Apie studiją</a></li>
-        <li><a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a></li>
-        <li><a href="#">Mūsų vertybės</a></li>
+        <li><a href="../lt/about_us.html">Apie studiją</a></li>
+        <li><a href="../lt/teachers.html">Mokytojai</a></li>
       </ul>
     </div>
 
@@ -119,7 +117,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="#"
+            <a href="../lt/index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
@@ -155,12 +153,12 @@
           <div class="footer_column">
             <h2>Naršyti</h2>
             <ul>
-              <li><a href="#">Šokių studija</a></li>
-              <li><a href="#">Šokių stiliai</a></li>
-              <li><a href="#">Treneriai</a></li>
-              <li><a href="#">Tvarkaraščiai</a></li>
-              <li><a href="#">Kainos</a></li>
-              <li><a href="#">Registracija</a></li>
+              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li><a href="../lt/teachers.html">Mokytojai</a></li>
+              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="../lt/prices.html">Kainos</a></li>
+              <li><a href="../lt/registration.html">Registracija</a></li>
             </ul>
           </div>
 
