--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -15,24 +15,23 @@
     <header>
         <div class="header_container">
             <div class="header_content">
-                <a href="http://127.0.0.1:8080/lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
+                <a href="../lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
                 <div class="menu-icon">&#9776;</div>
                 <div class="nav_wrapper">
                     <nav class="links">
                         <div class="dropdown">
-                            <a href="http://127.0.0.1:8080/lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
+                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
                             <div class="dropdown_content">
-                                <a href="#">Studija</a>
-                                <a href="#">Mokytojai</a>
-                                <a href="#">Mūsų vertybės</a>
+                                <a href="../lt/about_us.html">Studija</a>
+                                <a href="../lt/teachers.html">Mokytojai</a>
                             </div>
                         </div>
-                        <a href="#" class="Tvarkaraščiai">Tvarkaraščiai</a>
-                        <a href="#" class="Kainos">Kainos</a>
-                        <a href="#" class="Kontaktai">Kontaktai</a>
-                        <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
+                        <a href="../lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
+                        <a href="../lt/prices.html" class="Kainos">Kainos</a>
+                        <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
+                        <a href="../en/teachers.html" class="LT">LT</a>
                     </nav>
-                    <a href="#">
+                    <a href="../lt/registration.html">
                         <button class="registracija">Registracija</button>
                     </a>
                 </div>               
@@ -42,16 +41,15 @@
     <div class="off-screen-menu">
         <ul class="main-menu">
           <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-          <li><a href="#">Tvarkaraščiai</a></li>
-          <li><a href="#">Kainos</a></li>
-          <li><a href="#">Kontaktai</a></li>
-          <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
+          <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+          <li><a href="../lt/prices.html">Kainos</a></li>
+          <li><a href="../lt/contact.html">Kontaktai</a></li>
+          <li><a href="../en/teachers.html">LT</a></li>
         </ul>
         <ul class="apie-mus-menu">
           <li><a href="#" class="back-to-main">← Atgal</a></li>
-          <li><a href="#">Apie studiją</a></li>
-          <li><a href="#">Mokytojai</a></li>
-          <li><a href="#">Mūsų vertybės</a></li>
+          <li><a href="../lt/about_us.html">Apie studiją</a></li>
+          <li><a href="../lt/teachers.html">Mokytojai</a></li>
         </ul>
     </div>
     <section>
@@ -64,28 +62,28 @@
         <div class="teachers_grid">
             <div class="teacher">
                 <img src="../images/IMG_1304.jpg" alt="Matas Stirbys">
-                <h2>Matas Stirbys <a href="http://127.0.0.1:8080/lt/teacher_1.html">
+                <h2>Matas Stirbys <a href="../lt/teacher_1.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Mokytojas: Pop, Show Dance, Folk Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_1354.jpg" alt="Mindaugas Padagas">
-                <h2>Mindaugas Padagas<a href="http://127.0.0.1:8080/lt/teacher_2.html">
+                <h2>Mindaugas Padagas<a href="../lt/teacher_2.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Šokio mokytojas metodininkas: Pop, Show Dance, Latin Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_1279.jpg" alt="Juste Tulickienė">
-                <h2>Justė Tulickienė<a href="http://127.0.0.1:8080/lt/teacher_3.html">
+                <h2>Justė Tulickienė<a href="../lt/teacher_3.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Vyr. Šokio mokytoja: Pop, Show Dance, Folk Dance</p>
             </div>
             <div class="teacher">
                 <img src="../images/IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė">
-                <h2>Donata Meiliūtė-Paulauskienė <a href="http://127.0.0.1:8080/lt/teacher_4.html">
+                <h2>Donata Meiliūtė-Paulauskienė <a href="../lt/teacher_4.html">
                     <i class="bi bi-box-arrow-up-right custom_icon"></i>
                 </a></h2>
                 <p>Šokio mokytoja metodininkė, studijos vedėja: Pop, Show Dance, Folk Dance</p>
@@ -96,7 +94,7 @@
         <div class="footer_container">
             <div class="footer_content">
                 <div class="footer_column">
-                    <a href="#"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white"></a>
+                    <a href="../lt/index.html"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white"></a>
                     <div class="footer_paragraph">
                         <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
                     </div>
@@ -107,14 +105,14 @@
                 </div>
                 <div class="footer_column">
                     <h2>Naršyti</h2>
-                    <ul>
-                      <li><a href="#">Šokių studija</a></li>
-                      <li><a href="#">Šokių stiliai</a></li>
-                      <li><a href="#">Treneriai</a></li>
-                      <li><a href="#">Tvarkaraščiai</a></li>
-                      <li><a href="#">Kainos</a></li>
-                      <li><a href="#">Registracija</a></li>
-                    </ul>
+            <ul>
+              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li><a href="../lt/teachers.html">Mokytojai</a></li>
+              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="../lt/prices.html">Kainos</a></li>
+              <li><a href="../lt/registration.html">Registracija</a></li>
+            </ul>
                   </div>
               
                   <div class="footer_column">
