--- a/lt/contact.html
+++ b/lt/contact.html
@@ -1,108 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inkarelis</title>
-  <link rel="stylesheet" href="../css/contact.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet" />
-  <script src="../js/main.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inkarelis</title>
+    <link rel="stylesheet" href="../css/contact.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../js/main.js" defer></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header_container">
-            <div class="header_content">
-                <a href="http://127.0.0.1:8080/EN/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
-                <div class="menu-icon">&#9776;</div>
-                <div class="nav_wrapper">
-                    <nav class="links">
-                        <div class="dropdown">
-                            <a href="http://127.0.0.1:8080/lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
-                            <div class="dropdown_content">
-                                <a href="#">Studija</a>
-                                <a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a>
-                                <a href="#">Mūsų vertybės</a>
-                            </div>
-                        </div>
-                        <a href="#" class="Tvarkaraščiai">Tvarkaraščiai</a>
-                        <a href="#" class="Kainos">Kainos</a>
-                        <a href="#" class="Kontaktai">Kontaktai</a>
-                        <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
-                    </nav>
-                    <a href="#">
-                        <button class="registracija">Registracija</button>
-                    </a>
-                </div>               
-            </div>
+      <div class="header_container">
+        <div class="header_content">
+          <a href="../lt/index.html"
+            ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
+          /></a>
+          <div class="menu-icon">&#9776;</div>
+          <div class="nav_wrapper">
+            <nav class="links">
+              <div class="dropdown">
+                <a href="../lt/about_us.html" class="apie_mus" tabindex="0"
+                  >Apie mus</a
+                >
+                <div class="dropdown_content">
+                  <a href="../lt/about_us.html">Studija</a>
+                  <a href="../lt/teachers.html">Mokytojai</a>
+                </div>
+              </div>
+              <a href="../lt/schedule.html" class="Tvarkaraščiai"
+                >Tvarkaraščiai</a
+              >
+              <a href="../lt/prices.html" class="Kainos">Kainos</a>
+              <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
+              <a href="../en/teachers.html" class="LT">LT</a>
+            </nav>
+            <a href="../lt/registration.html">
+              <button class="registracija">Registracija</button>
+            </a>
+          </div>
         </div>
+      </div>
     </header>
     <div class="off-screen-menu">
-        <ul class="main-menu">
-          <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-          <li><a href="#">Tvarkaraščiai</a></li>
-          <li><a href="#">Kainos</a></li>
-          <li><a href="#">Kontaktai</a></li>
-          <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
-        </ul>
-        <ul class="apie-mus-menu">
-          <li><a href="#" class="back-to-main">← Atgal</a></li>
-          <li><a href="#">Apie studiją</a></li>
-          <li><a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a></li>
-          <li><a href="#">Mūsų vertybės</a></li>
-        </ul>
+      <ul class="main-menu">
+        <li><a href="#" class="open-apie-mus">Apie mus</a></li>
+        <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+        <li><a href="../lt/prices.html">Kainos</a></li>
+        <li><a href="../lt/contact.html">Kontaktai</a></li>
+        <li><a href="../en/teachers.html">LT</a></li>
+      </ul>
+      <ul class="apie-mus-menu">
+        <li><a href="#" class="back-to-main">← Atgal</a></li>
+        <li><a href="../lt/about_us.html">Apie studiją</a></li>
+        <li><a href="../lt/teachers.html">Mokytojai</a></li>
+      </ul>
     </div>
-
-  
-  <footer>
-    <div class="footer_container">
-      <div class="footer_content">
-        <div class="footer_column">
-          <a href="#"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white" /></a>
-          <div class="footer_paragraph">
-            <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
+    <section>
+      <div class="headingAndText">
+        <h1>
+          Kontaktai
+          <p>Papildoma informacija apie studiją</p>
+        </h1>
+      </div>
+      <div class="info">
+        <div class="phone_num">
+          <div class="heading_logo">
+            <img src="../images/Phone_logo.png" alt="Phone icon" />
+            <div class="heading_text">
+              <h2>Telefonas</h2>
+              <p>+370 638 22740</p>
+              <p>+370 682 77661</p>
+            </div>
           </div>
-          <div class="social_logos">
-            <a target="_blank" href="https://www.instagram.com/inkarelistudio/"><img class="instagram" src="../images/Instagram.png" alt="instagram" /></a>
-            <a target="_blank" href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"><img class="facebook" src="../images/Facebook.png" alt="facebook" /></a>
+        </div>
+
+        <div class="adress">
+          <div class="heading_logo">
+            <img src="../images/Pin_point.png" alt="Location icon" />
+            <div class="heading_text">
+              <h2>Adresas</h2>
+              <p>Laukininkų g. 13A-2,<br />II aukštas, Klaipėda</p>
+            </div>
           </div>
         </div>
 
-        <div class="footer_column">
-          <h2>Naršyti</h2>
-          <ul>
-            <li><a href="#">Šokių studija</a></li>
-            <li><a href="#">Šokių stiliai</a></li>
-            <li><a href="#">Treneriai</a></li>
-            <li><a href="#">Tvarkaraščiai</a></li>
-            <li><a href="#">Kainos</a></li>
-            <li><a href="#">Registracija</a></li>
-          </ul>
+        <div class="email">
+          <div class="heading_logo">
+            <img src="../images/Email.png" alt="Email icon" />
+            <div class="heading_text">
+              <h2>El. Paštas</h2>
+              <p>inkarelis@kkljc.lt</p>
+            </div>
+          </div>
         </div>
 
-        <div class="footer_column">
-          <h2>Kontaktai</h2>
-          <p>+370 463 24489</p>
-          <p>+370 462 21906</p>
-          <p>inkarelis@kkljc.lt</p>
-        </div>
-
-        <div class="footer_column">
-          <h2>Laukininkų g. 13, Klaipėda</h2>
-          <img src="../images/Lt_map.png" alt="Map" class="map" />
+        <div class="time">
+          <div class="heading_logo">
+            <img src="../images/Time.png" alt="Clock icon" />
+            <div class="heading_text">
+              <h2>Darbo laikas</h2>
+              <p>I – IV – 08:00–21:00</p>
+              <p>V – 08:00–19:00</p>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="footer_bottom">
-        <hr />
-        <p class="copyright">
-          Šokių studija „Inkarėlis“ © 2025.
-        </p>
+      <div class="info_2">
+        <div class="Soc">
+          <h2>Socialiniai tinklai</h2>
+          <a
+            target="_blank"
+            href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"
+            >facebook</a
+          ><br />
+          <a target="_blank" href="https://www.instagram.com/inkarelistudio/"
+            >instagram</a
+          >
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+      <div class="map_inkarelis">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d562.6032026690895!2d21.191447456996954!3d55.66442131379393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4ddaa9c65f891%3A0x6b6e19d1f22e7ef6!2sLaukinink%C5%B3%20g.%2013A%2C%20Klaip%C4%97da%2C%2095177%20Klaip%C4%97dos%20m.%20sav.!5e0!3m2!1slt!2slt!4v1746969683584!5m2!1slt!2slt"
+          width="100%"
+          height="700"
+          style="border: 0; display: block; margin: 0 auto"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+    <footer>
+      <div class="footer_container">
+        <div class="footer_content">
+          <div class="footer_column">
+            <a href="../lt/index.html"
+              ><img
+                class="logo_white"
+                src="../images/Inkarelis 2.png"
+                alt="logotipas_white"
+            /></a>
+            <div class="footer_paragraph">
+              <p>
+                Choreografijos studija „Inkarėlis“ – šokių studija pietinėje
+                Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių
+                stiliaus užsiėmimus.
+              </p>
+            </div>
+            <div class="social_logos">
+              <a
+                target="_blank"
+                href="https://www.instagram.com/inkarelistudio/"
+                ><img
+                  class="instagram"
+                  src="../images/Instagram.png"
+                  alt="instagram"
+              /></a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"
+                ><img
+                  class="facebook"
+                  src="../images/Facebook.png"
+                  alt="facebook"
+              /></a>
+            </div>
+          </div>
+
+          <div class="footer_column">
+            <h2>Naršyti</h2>
+            <ul>
+              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li>
+                <a href="../lt/index.html#sokiu_stiliai_section"
+                  >Šokių stiliai</a
+                >
+              </li>
+              <li><a href="../lt/teachers.html">Mokytojai</a></li>
+              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="../lt/prices.html">Kainos</a></li>
+              <li><a href="../lt/registration.html">Registracija</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_column">
+            <h2>Kontaktai</h2>
+            <p>+370 463 24489</p>
+            <p>+370 462 21906</p>
+            <p>inkarelis@kkljc.lt</p>
+          </div>
+
+          <div class="footer_column">
+            <h2>Laukininkų g. 13, Klaipėda</h2>
+            <img src="../images/Lt_map.png" alt="Map" class="map" />
+          </div>
+        </div>
+
+        <div class="footer_bottom">
+          <hr />
+          <p class="copyright">Šokių studija „Inkarėlis“ © 2025.</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
