--- a/lt/folk_dance.html
+++ b/lt/folk_dance.html
@@ -22,37 +22,33 @@
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="http://127.0.0.1:8080/lt/index.html"
+          <a href="../lt/index.html"
             ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
           <div class="nav_wrapper">
             <nav class="links">
               <div class="dropdown">
-                <a
-                  href="http://127.0.0.1:8080/lt/about_us.html"
-                  class="apie_mus"
-                  tabindex="0"
+                <a href="../lt/about_us.html" class="apie_mus" tabindex="0"
                   >Apie mus</a
                 >
                 <div class="dropdown_content">
-                  <a href="#">Studija</a>
-                  <a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a>
-                  <a href="#">Mūsų vertybės</a>
+                  <a href="../lt/about_us.html">Studija</a>
+                  <a href="../lt/teachers.html">Mokytojai</a>
                 </div>
               </div>
               <a
-                href="http://127.0.0.1:8080/lt/schedule.html"
+                href="../lt/schedule.html"
                 class="Tvarkaraščiai"
                 >Tvarkaraščiai</a
               >
-              <a href="http://127.0.0.1:8080/lt/prices.html" class="Kainos"
+              <a href="../lt/prices.html" class="Kainos"
                 >Kainos</a
               >
               <a href="#" class="Kontaktai">Kontaktai</a>
-              <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
+              <a href="../en/teachers.html" class="LT">LT</a>
             </nav>
-            <a href="#">
+            <a href="../lt/registration.html">
               <button class="registracija">Registracija</button>
             </a>
           </div>
@@ -62,16 +58,15 @@
     <div class="off-screen-menu">
       <ul class="main-menu">
         <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-        <li><a href="#">Tvarkaraščiai</a></li>
-        <li><a href="#">Kainos</a></li>
-        <li><a href="#">Kontaktai</a></li>
-        <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
+        <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+        <li><a href="../lt/prices.html">Kainos</a></li>
+        <li><a href="../lt/contact.html">Kontaktai</a></li>
+        <li><a href="../en/teachers.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
-        <li><a href="#">Apie studiją</a></li>
-        <li><a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a></li>
-        <li><a href="#">Mūsų vertybės</a></li>
+        <li><a href="../lt/about_us.html">Apie studiją</a></li>
+        <li><a href="../lt/teachers.html">Mokytojai</a></li>
       </ul>
     </div>
 
@@ -81,9 +76,12 @@
           <h3>Šokių stilius</h3>
           <h1>Folk Dance</h1>
           <p>
-            Šokiai, būdingi tautos charakteriui, sukurti pagal liaudies šokius, žaidimus, ratelius, dainas ar papročius, vadinami tautiniais šokiais. Tautiniai šokiai skiriasi nuo liaudies šokių tuo, kad jie yra parodomieji šokiai, pritaikyti scenai.
+            Šokiai, būdingi tautos charakteriui, sukurti pagal liaudies šokius,
+            žaidimus, ratelius, dainas ar papročius, vadinami tautiniais
+            šokiais. Tautiniai šokiai skiriasi nuo liaudies šokių tuo, kad jie
+            yra parodomieji šokiai, pritaikyti scenai.
           </p>
-          
+
           <p>Tautiniai šokiai glaudžiai rišasi su:</p>
           <ul>
             <li>daina,</li>
@@ -91,10 +89,11 @@
             <li>šokio apranga,</li>
             <li>papročiais.</li>
           </ul>
-          
+
           <p>
-            Jie yra tarsi tautos senųjų laikų liaudies šokių, muzikos, meno, rūbų, papročių tąsa dabartinėse gyvenimo sąlygose.
-          </p>          
+            Jie yra tarsi tautos senųjų laikų liaudies šokių, muzikos, meno,
+            rūbų, papročių tąsa dabartinėse gyvenimo sąlygose.
+          </p>
         </div>
         <div class="pop_photo">
           <img src="../images/folk_dance.png" />
@@ -106,7 +105,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="#"
+            <a href="../lt/index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
@@ -142,12 +141,12 @@
           <div class="footer_column">
             <h2>Naršyti</h2>
             <ul>
-              <li><a href="#">Šokių studija</a></li>
-              <li><a href="#">Šokių stiliai</a></li>
-              <li><a href="#">Treneriai</a></li>
-              <li><a href="#">Tvarkaraščiai</a></li>
-              <li><a href="#">Kainos</a></li>
-              <li><a href="#">Registracija</a></li>
+              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li><a href="../lt/teachers.html">Mokytojai</a></li>
+              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="../lt/prices.html">Kainos</a></li>
+              <li><a href="../lt/registration.html">Registracija</a></li>
             </ul>
           </div>
 
