--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-    <script src="../js/main.js" defer></script>
+    <script src="js/main.js" defer></script>
   </head>
 
   <body>
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="../lt/index.html"
+          <a href="index.html"
             ><img
               class="logo"
-              src="../images/Inkarelis_white 1.png"
+              src="images/Inkarelis_white 1.png"
               alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
@@ -197,7 +197,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="../lt/index.html"
+            <a href="index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
