--- a/index.html
+++ b/index.html
@@ -32,24 +32,20 @@
           <div class="nav_wrapper">
             <nav class="links">
               <div class="dropdown">
-                <a href="../lt/about_us.html" class="apie_mus" tabindex="0"
+                <a href="lt/about_us.html" class="apie_mus" tabindex="0"
                   >Apie mus</a
                 >
                 <div class="dropdown_content">
-                  <a href="../lt/about_us.html">Studija</a>
-                  <a href="../lt/teachers.html">Mokytojai</a>
+                  <a href="lt/about_us.html">Studija</a>
+                  <a href="lt/teachers.html">Mokytojai</a>
                 </div>
               </div>
-              <a href="../lt/schedule.html" class="Tvarkaraščiai"
-                >Tvarkaraščiai</a
-              >
-              <a href="../lt/prices.html" class="Kainos">Kainos</a>
-              <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
-              <a href="../en/index.html" class="LT">LT</a>
+              <a href="lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
+              <a href="lt/prices.html" class="Kainos">Kainos</a>
+              <a href="lt/contact.html" class="Kontaktai">Kontaktai</a>
+              <a href="en/index.html" class="LT">LT</a>
             </nav>
-            <a href="../lt/registration.html" class="header_btn"
-              >Registracija</a
-            >
+            <a href="lt/registration.html" class="header_btn">Registracija</a>
           </div>
         </div>
       </div>
@@ -58,15 +54,15 @@
     <div class="off-screen-menu">
       <ul class="main-menu">
         <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-        <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
-        <li><a href="../lt/prices.html">Kainos</a></li>
-        <li><a href="../lt/contact.html">Kontaktai</a></li>
-        <li><a href="../en/index.html">LT</a></li>
+        <li><a href="lt/schedule.html">Tvarkaraščiai</a></li>
+        <li><a href="lt/prices.html">Kainos</a></li>
+        <li><a href="lt/contact.html">Kontaktai</a></li>
+        <li><a href="en/index.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
-        <li><a href="../lt/about_us.html">Apie studiją</a></li>
-        <li><a href="../lt/teachers.html">Mokytojai</a></li>
+        <li><a href="lt/about_us.html">Apie studiją</a></li>
+        <li><a href="lt/teachers.html">Mokytojai</a></li>
       </ul>
     </div>
 
@@ -74,17 +70,17 @@
       <div class="hero">
         <div class="hero_video">
           <video autoplay muted loop playsinline id="hero-video">
-            <source src="../images/inkarelis_hero.mp4" type="video/mp4" />
-            <source src="../images/inkarelis_hero.webm" type="video/webm" />
-            <source src="../images/inkarelis_hero.ogv" type="video/ogg" />
+            <source src="images/inkarelis_hero.mp4" type="video/mp4" />
+            <source src="images/inkarelis_hero.webm" type="video/webm" />
+            <source src="images/inkarelis_hero.ogv" type="video/ogg" />
           </video>
         </div>
         <div class="hero_content">
           <h1>Pradėk savo šokio kelionę kartu su mumis!</h1>
-          <a href="../lt/registration.html" class="hero_btn">Prisijunk Dabar</a>
+          <a href="lt/registration.html" class="hero_btn">Prisijunk Dabar</a>
         </div>
         <a href="#apie_mus_section"
-          ><img class="anchor" src="../images/Anchor_icon 1.png" alt="anchor"
+          ><img class="anchor" src="images/Anchor_icon 1.png" alt="anchor"
         /></a>
       </div>
     </section>
@@ -95,7 +91,7 @@
           <div class="apie_mus_column">
             <h2>Apie mus</h2>
             <div class="apie_mus_flex">
-              <img src="../images/Line 1.png" />
+              <img src="images/Line 1.png" />
               <p>
                 Choreografijos studija „Inkarėlis“ – šokių studija pietinėje
                 Klaipėdos miesto dalyje. Studija yra Pasaulio lietuvių ir
@@ -107,15 +103,15 @@
                 ar patirties lygio.
               </p>
             </div>
-            <a href="../lt/about_us.html" class="skaityti_btn">
-              <img src="../images/skaityti_placiau.png" alt="arrow icon" />
+            <a href="lt/about_us.html" class="skaityti_btn">
+              <img src="images/skaityti_placiau.png" alt="arrow icon" />
               Skaityti plačiau
             </a>
           </div>
           <div class="apie_mus_column">
             <img
               class="apie_mus_dancer"
-              src="../images/apie_mus_dancer.jpg"
+              src="images/apie_mus_dancer.jpg"
               alt="apie_mus_dancer"
             />
           </div>
@@ -129,22 +125,16 @@
       </div>
       <div class="sokiu_stiliai_container">
         <div class="apie_mus_pop">
-          <a href="../lt/pop_dance.html"><img src="../images/Slice 5.png" /></a>
+          <a href="lt/pop_dance.html"><img src="images/Slice 5.png" /></a>
         </div>
         <div class="apie_mus_show">
-          <a href="../lt/show_dance.html"
-            ><img src="../images/Slice 3.png"
-          /></a>
+          <a href="lt/show_dance.html"><img src="images/Slice 3.png" /></a>
         </div>
         <div class="apie_mus_folk">
-          <a href="../lt/folk_dance.html"
-            ><img src="../images/Slice 1 (1).png"
-          /></a>
+          <a href="lt/folk_dance.html"><img src="images/Slice 1 (1).png" /></a>
         </div>
         <div class="apie_mus_kids">
-          <a href="../lt/kids_dance.html"
-            ><img src="../images/Slice 2 (1).png"
-          /></a>
+          <a href="lt/kids_dance.html"><img src="images/Slice 2 (1).png" /></a>
         </div>
       </div>
     </section>
@@ -152,15 +142,15 @@
     <section>
       <div class="section_div">
         <div class="item">
-          <img src="../images/Students (1).png" />
+          <img src="images/Students (1).png" />
           <h3>200+<br />Mokinių</h3>
         </div>
         <div class="item">
-          <img src="../images/Vector.png" />
+          <img src="images/Vector.png" />
           <h3>Vasaros<br />Stovyklos</h3>
         </div>
         <div class="item">
-          <img src="../images/Hourglass.png" />
+          <img src="images/Hourglass.png" />
           <h3>Patyrę<br />Mokytojai</h3>
         </div>
       </div>
@@ -172,25 +162,23 @@
       </div>
       <div class="treneriai_container">
         <div class="matas_container">
-          <img src="../images/coach1.png" />
+          <img src="images/coach1.png" />
           <h3>Matas Stirbys</h3>
         </div>
         <div class="mindaugas_container">
-          <img src="../images/coach2.png" />
+          <img src="images/coach2.png" />
           <h3>Mindaugas Padagas</h3>
         </div>
         <div class="juste_container">
-          <img src="../images/coach3.png" />
+          <img src="images/coach3.png" />
           <h3>Justė Tulickienė</h3>
         </div>
         <div class="donata_container">
-          <img src="../images/coach4.png" />
+          <img src="images/coach4.png" />
           <h3>Donata Meiliūtė-Paulauskienė</h3>
         </div>
       </div>
-      <a href="../lt/teachers.html" class="skaityti_placiau"
-        >Skaityti plačiau</a
-      >
+      <a href="lt/teachers.html" class="skaityti_placiau">Skaityti plačiau</a>
     </section>
 
     <footer>
@@ -200,7 +188,7 @@
             <a href="index.html"
               ><img
                 class="logo_white"
-                src="../images/Inkarelis 2.png"
+                src="images/Inkarelis 2.png"
                 alt="logotipas_white"
             /></a>
             <div class="footer_paragraph">
@@ -216,16 +204,13 @@
                 href="https://www.instagram.com/inkarelistudio/"
                 ><img
                   class="instagram"
-                  src="../images/Instagram.png"
+                  src="images/Instagram.png"
                   alt="instagram"
               /></a>
               <a
                 target="_blank"
                 href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"
-                ><img
-                  class="facebook"
-                  src="../images/Facebook.png"
-                  alt="facebook"
+                ><img class="facebook" src="images/Facebook.png" alt="facebook"
               /></a>
             </div>
           </div>
@@ -233,12 +218,12 @@
           <div class="footer_column">
             <h2>Naršyti</h2>
             <ul>
-              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li><a href="lt/about_us.html">Šokių studija</a></li>
               <li><a href="#sokiu_stiliai_section">Šokių stiliai</a></li>
-              <li><a href="../lt/teachers.html">Mokytojai</a></li>
-              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
-              <li><a href="../lt/prices.html">Kainos</a></li>
-              <li><a href="../lt/registration.html">Registracija</a></li>
+              <li><a href="lt/teachers.html">Mokytojai</a></li>
+              <li><a href="lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="lt/prices.html">Kainos</a></li>
+              <li><a href="lt/registration.html">Registracija</a></li>
             </ul>
           </div>
 
@@ -251,7 +236,7 @@
 
           <div class="footer_column">
             <h2>Laukininkų g. 13, Klaipėda</h2>
-            <img src="../images/Lt_map.png" alt="Map" class="map" />
+            <img src="images/Lt_map.png" alt="Map" class="map" />
           </div>
         </div>
 
