fix: update file paths

--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header_container">
             <div class="header_content">
-                <a href="index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
+                <a href="../index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
                 <div class="menu-icon">&#9776;</div>
                 <div class="nav_wrapper">
                     <nav class="links">
@@ -94,7 +94,7 @@
         <div class="footer_container">
             <div class="footer_content">
                 <div class="footer_column">
-                    <a href="index.html"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white"></a>
+                    <a href="../index.html"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white"></a>
                     <div class="footer_paragraph">
                         <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
                     </div>
@@ -107,7 +107,7 @@
                     <h2>Naršyti</h2>
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
-              <li><a href="index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li><a href="../index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
               <li><a href="../lt/prices.html">Kainos</a></li>
