--- a/lt/kids_dance.html
+++ b/lt/kids_dance.html
@@ -22,7 +22,7 @@
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="index.html"
+          <a href="../index.html"
             ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
@@ -104,7 +104,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="index.html"
+            <a href="../index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
@@ -141,7 +141,7 @@
             <h2>Naršyti</h2>
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
-              <li><a href="index.html">Šokių stiliai</a></li>
+              <li><a href="../index.html">Šokių stiliai</a></li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
               <li><a href="../lt/prices.html">Kainos</a></li>
