fix: rename file paths

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="index.html"
             ><img
               class="logo"
-              src="images/Inkarelis_white 1.png"
+              src="images/Inkarelis_white_1.png"
               alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
