--- a/lt/prices.html
+++ b/lt/prices.html
@@ -23,7 +23,7 @@
       <div class="header_container">
         <div class="header_content">
           <a href="../index.html"
-            ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
+            ><img class="logo" src="../images/Inkarelis_1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
           <div class="nav_wrapper">
