--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header_container">
             <div class="header_content">
-                <a href="../index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
+                <a href="../index.html"><img class="logo" src="../images/Inkarelis_1.png" alt="logotipas"></a>
                 <div class="menu-icon">&#9776;</div>
                 <div class="nav_wrapper">
                     <nav class="links">
