fix: structure review

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <section id="treneriai_section">
       <div class="treneriai_heading">
-        <h2>Mūsų treneriai</h2>
+        <h2>Mūsų mokytojai</h2>
       </div>
       <div class="treneriai_container">
         <div class="matas_container">
