--- a/lt/prices.html
+++ b/lt/prices.html
@@ -69,7 +69,10 @@
 
     <section id="kainos_section">
       <div class="kainos_heading">
-        <h1>Kainos</h1>
+        <h1>
+          Kainos
+          <p>Informacija apie kainą</p>
+        </h1>
       </div>
       <div class="kaina_container">
         <div class="kaina_box">
@@ -132,9 +135,7 @@
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
               <li>
-                <a href="../index.html#sokiu_stiliai_section"
-                  >Šokių stiliai</a
-                >
+                <a href="../index.html#sokiu_stiliai_section">Šokių stiliai</a>
               </li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
