fix: buttons now work

--- a/lt/prices.html
+++ b/lt/prices.html
@@ -54,16 +54,28 @@
               <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
               <a href="../en/teachers.html" class="LT">LT</a>
             </nav>
-            <a href="../lt/registration.html">
-              <button class="registracija">Registracija</button>
-            </a>
+            <a href="../lt/registration.html" class="header_btn"
+              >Registracija</a
+            >
           </div>
         </div>
       </div>
     </header>
     <div class="off-screen-menu">
       <ul class="main-menu">
-        <li><a href="#" class="open-apie-mus">Apie mus</a></li>
+        <li>
+          <a href="#" class="open-apie-mus">Apie mus</a>
+          <svg
+            class="chevron-down"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="14"
+            height="14"
+            style="fill: black; vertical-align: middle"
+          >
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+          </svg>
+        </li>
         <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
         <li><a href="../lt/prices.html">Kainos</a></li>
         <li><a href="../lt/contact.html">Kontaktai</a></li>
