--- a/lt/about_us.html
+++ b/lt/about_us.html
@@ -37,10 +37,7 @@
                     viewBox="0 0 24 24"
                     width="14"
                     height="14"
-                    style="
-                      fill: black;
-                      vertical-align: middle;
-                    "
+                    style="fill: black; vertical-align: middle"
                   >
                     <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
                   </svg>
@@ -58,9 +55,9 @@
               <a href="../lt/schedule.html" class="Kontaktai">Kontaktai</a>
               <a href="../en/about_us.html" class="LT">LT</a>
             </nav>
-            <a href="../lt/registration.html">
-              <button class="registracija">Registracija</button>
-            </a>
+            <a href="../lt/registration.html" class="header_btn"
+              >Registracija</a
+            >
           </div>
         </div>
       </div>
