--- a/lt/folk_dance.html
+++ b/lt/folk_dance.html
@@ -54,9 +54,9 @@
               <a href="#" class="Kontaktai">Kontaktai</a>
               <a href="../en/teachers.html" class="LT">LT</a>
             </nav>
-            <a href="../lt/registration.html">
-              <button class="registracija">Registracija</button>
-            </a>
+            <a href="../lt/registration.html" class="header_btn"
+              >Registracija</a
+            >
           </div>
         </div>
       </div>
